--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     testCompile("junit:junit")
-    compile('javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1') {
-        transitive = false
-    }
+    compile group: 'javax.servlet.jsp.jstl', name: 'jstl', version: '1.2'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.0.RELEASE'
+
+
 }
